# dc_motor_control_tutorial

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md
include/: encoder_interface.h  motor.h  motor_interface.h  serial_interface.h
scripts/: motor.py  motor_test.py
src/: encoder_hardware_test.cpp  encoder_interface.cpp  motor.cpp  motor_hardware_test.cpp  motor_interface.cpp  motor_test.cpp  serial.cpp  serial_interface.cpp
test/: motor_tests.cpp
